# ChatVasp

./: .env.example  .gitignore  README.md  chroma.sqlite3  pyproject.toml
src/hpc/: ssh.py
src/tools/: mcp.py  module_tools.py  pbs_tools.py  structure_tools.py
src/vaspgo/: model_client.py  planning_agent.py  review_agent.py  selector.py  submit_agent.py
src/vaspgo/data/: incar_examples.json  task_examples.json
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/: README.UPDATES  data_base  log.message
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Ac/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Ag_GW/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Ag_pv/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Ag_sv_GW/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Al_GW/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Al_sv_GW/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Am/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Ar/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/Ar_GW/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/As/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/As_GW/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/As_d/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/As_sv_GW/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/At/: POTCAR
src/vaspgo/data/pbe64/POT_GGA_PAW_PBE/At_d_GW/: POTCAR
src/vaspgo/rag/: rag_indexer.py  rag_memory.py  text_processor.py
src/vaspgo/vaspflow/: flow.py  incar_agent.py  kpoints_agent.py  poscar_agent.py  potcar_agent.py  submit_agent.py  task_agent.py
tests/: test_planning.py  test_qsub.py  test_submit.py  test_vaspflow.py
(+353 files in other folders)
